Refactor build files: remove Brotli compressed files and update references in index.html
- Deleted Brotli compressed framework and WASM files: portfolio3d-html.framework.js.br and portfolio3d-html.wasm.br.
- Added uncompressed WASM file: portfolio3d-html.wasm.
- Updated index.html to reference uncompressed data, framework, and code files.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/portfolio3d-html.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/portfolio3d-html.data.br",
-        frameworkUrl: buildUrl + "/portfolio3d-html.framework.js.br",
-        codeUrl: buildUrl + "/portfolio3d-html.wasm.br",
+        dataUrl: buildUrl + "/portfolio3d-html.data",
+        frameworkUrl: buildUrl + "/portfolio3d-html.framework.js",
+        codeUrl: buildUrl + "/portfolio3d-html.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Portfolio 3D",
