Refactor Unity build configuration: update file names to use hyphens instead of underscores, and change company name to "Faishal Pasa".

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/portfolio3d-html.loader.js";
+      var loaderUrl = buildUrl + "/portfolio-3d-html.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/portfolio3d-html.data",
-        frameworkUrl: buildUrl + "/portfolio3d-html.framework.js",
-        codeUrl: buildUrl + "/portfolio3d-html.wasm",
+        dataUrl: buildUrl + "/portfolio-3d-html.data",
+        frameworkUrl: buildUrl + "/portfolio-3d-html.framework.js",
+        codeUrl: buildUrl + "/portfolio-3d-html.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Faishal Pasa",
         productName: "Portfolio 3D",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
@@ -98,11 +98,10 @@
 
       // } else {
       //   // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-      //   canvas.style.width = "1024px";
-      //   canvas.style.height = "768px";
+      //   canvas.style.width = "1280px";
+      //   canvas.style.height = "720px";
       // }
 
-      // Force to fullscreen
       var meta = document.createElement('meta');
       meta.name = 'viewport';
       meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
